# dotpath

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUALITY.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: PROJECT_BRIEF.md
src/dotpath/: __init__.py  _core.py
tests/: test_dotpath.py
